# mcp-sql-agent

./: .gitignore  README.md  mcp_client.py  mcp_server.py  pyproject.toml
