[project]
name = "introduction-to-mcp-with-sql-agent"
version = "0.1.0"
description = "Build an AI SQL agent using MCP to interact with a SQLite database through natural language."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]